# string-finder

./: .gitignore  CMakeLists.txt  perf.data.old
src/: CMakeLists.txt
src/string_finder/: exceptions.h  general_declarations.cpp  general_declarations.h  index.cpp  index.h  search.cpp  search.h  text_deteminer.cpp  text_deteminer.h  worker.cpp  worker.h
src/ui/: FileItem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/: trigram_counter.py
test/src/: CMakeLists.txt  generator.cpp  generator.h  internal_tests.cpp  main.cpp
